--- a/MenuShell Inlämn/MenuShell Inlämn.csproj
+++ b/MenuShell Inlämn/MenuShell Inlämn.csproj
@@ -43,11 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\IAuthenticationService.cs" />
+    <Compile Include="View\AddUserView.cs" />
+    <Compile Include="View\ListUsersView.cs" />
+    <Compile Include="View\LoginView.cs" />
+    <Compile Include="View\ReceptionistMainView.cs" />
+    <Compile Include="View\SysadminMainView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
